--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Excursion</title>
-        <link href="" rel="stylesheet">
+        <link href="resources/css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
-        <p>
-            <a href="index.html">Download Excursion (Coming soon!)</a>
-        </p>
-        
+        <p><a href="#" class="link">Download Excursion (Coming soon!)</a></p>
+        <video autoplay muted loop>
+            <source src="resources/images/excursion.mp4" type="video/mp4">
+        </video>
+
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of internet around you.</p>
+        <p><img src="resources/images/camp.webp"></p>
+        <p><img src="resources/images/phone.webp"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p><a href="#" class="link">Download Excursion (Coming soon!)</a></p>
+        <footer>&copy; Excursion</footer>
     </body>
 </html>
